--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "port": 8841,
+    "apiURL": "http://mtsar.eveel.ru",
     "processURL": "http://mtsar.eveel.ru/processes/adv-add",
+    "processes": ["adv-add", "adv-rm", "adv-verify"],
     "session": {
         "saveUninitialized": false,
         "resave": false,
