Specify no config.processes

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "disabled": false,
     "port": 8841,
     "apiURL": "http://mtsar.eveel.ru",
-    "processes": ["arv-add", "arv-rm", "arv-verify"],
+    "processes": null,
     "session": {
         "saveUninitialized": false,
         "resave": false,
