--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
     "serve-favicon": "^2.3.0",
+    "marked": "^0.3.5",
     "morgan": "^1.6.0",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
