--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-vkontakte": "^0.4.0",
-    "request": "^2.58.0"
+    "request": "^2.58.0",
+    "raven": "^0.8.1"
   }
 }
