--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport-vkontakte": "^0.4.0",
     "request": "^2.58.0",
     "request-ip": "^1.1.4",
+    "ua-parser-js": "^0.7.9",
     "raven": "^0.8.1"
   }
 }
