--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+assets/
+
 # Logs
 logs
 *.log
@@ -33,3 +35,9 @@ node_modules
 # Sublime Text
 *.sublime-project
 *.sublime-workspace
+
+# VS Code
+.vscode/
+jsconfig.json
+typings.json
+typings/
