--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ua-parser-js": "^0.7.10",
     "request": "^2.72.0",
     "font-awesome": "^4.6.3",
-    "purecss": "^0.6.0"
+    "purecss": "^0.6.0",
+    "http-errors": "^1.5.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
